Table users {
  user_id integer [primary key]
  firebase_id varchar
  f_name varchar
  l_name varchar
  email varchar [unique]
  password varchar
  profile_image varchar
  role varchar // user, super admin, admin, operator, terminal admin
  status varchar // active, inactive, suspended
  assigned_terminal integer [ref: > terminals.terminal_id]
  timestamps timestamp
}

Table terminals {
  terminal_id integer [primary key]
  terminal_name varchar
  location_lat float
  location_lng float
  status varchar // active, inactive
  timestamps timestamp
}

Table routes {
  route_id integer [primary key]
  route_name varchar
  route_code varchar
  start_terminal_id integer [ref: > terminals.terminal_id]
  end_terminal_id integer [ref: > terminals.terminal_id]
  estimated_duration integer
  status varchar // active, inactive, suspended
  route_type varchar // normal, vice_versa
  timestamps timestamp
}

Table route_stops {
  route_stop_id integer [primary key]
  route_id integer [ref: > routes.route_id]
  stop_name varchar
  stop_order integer
  latitude float
  longitude float
  timestamps timestamp
}

Table buses {
  bus_id integer [primary key]
  bus_number varchar
  plate_number varchar
  capacity integer
  status varchar // active, maintenance, out of service
  is_deleted boolean
  deleted_at timestamp
  timestamps timestamp
}

Table bus_statuses {
  bus_status_id integer [primary key]
  bus_id integer [ref: > buses.bus_id, unique]
  occupancy_count integer
  occupancy_status varchar // empty, few seats, standing room, full
  is_deleted boolean
  deleted_at timestamp
  timestamps timestamp
}

Table bus_locations {
  bus_location_id integer [primary key]
  bus_id integer [ref: > buses.bus_id]
  latitude float
  longitude float
  speed float
  timestamps timestamp
}

Table drivers {
  driver_id integer [primary key]
  f_name varchar
  l_name varchar
  license_number varchar
  contact_number varchar
  profile_image varchar
  status varchar // active, inactive
  is_deleted boolean
  deleted_at timestamp
  timestamps timestamp
}

Table bus_assignments {
  bus_assignment_id integer [primary key]
  bus_id integer [ref: > buses.bus_id]
  driver_id integer [ref: > drivers.driver_id]
  operator_user_id integer [ref: > users.user_id]
  route_id integer [ref: > routes.route_id]
  assignment_status varchar // active, inactive
  assignment_result varchar // pending, completed, cancelled
  latest_terminal_log_id integer [ref: > terminal_logs.terminal_log_id]
  scheduled_arrival_at timestamp
  timestamps timestamp
}

Table terminal_logs {
  terminal_log_id integer [primary key]
  bus_assignment_id integer [ref: > bus_assignments.bus_assignment_id]
  terminal_id integer [ref: > terminals.terminal_id]
  bus_id integer [ref: > buses.bus_id]
  event_type varchar // arrival, departure
  reported_by integer [ref: > users.user_id]
  confirmed_by integer [ref: > users.user_id]
  auto_detected boolean
  status varchar // pending, confirmed, rejected
  event_time timestamp
  confirmation_time timestamp
  timestamps timestamp
}

Table notifications {
  notification_id integer [primary key]
  sender_id integer [ref: > users.user_id]
  bus_id integer [ref: > buses.bus_id]
  route_id integer [ref: > routes.route_id]
  terminal_id integer [ref: > terminals.terminal_id]
  title varchar
  message text
  notification_type varchar // arrival_reported, arrival_confirmed, departure_reported, departure_confirmed, delay, full, skipped_stop, info, other, custom
  priority varchar // high, medium, low
  scope varchar // bus, route, terminal, system
  timestamps timestamp
}

Table user_notifications {
  user_notification_id integer [primary key]
  user_id integer [ref: > users.user_id]
  notification_id integer [ref: > notifications.notification_id]
  is_read boolean
  read_at timestamp
  timestamps timestamp
}

Table user_subscriptions {
  user_subscription_id integer [primary key]
  user_id integer [ref: > users.user_id]
  route_id integer [ref: > routes.route_id]
  bus_id integer [ref: > buses.bus_id]
  timestamps timestamp
}

Table system_logs {
  system_log_id integer [primary key]
  user_id integer [ref: > users.user_id]
  action varchar // Login, Logout, Create User, Update User, Delete User, Create Route, Update Route, Delete Route, Create Terminal, Update Terminal, Delete Terminal, Assign Bus, Remove Bus Assignment
  description text
  timestamps timestamp
}
